2000-06-14  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11895: Src/signals.c: exit traps weren't cleared from the
	list properly, resulting in memory management problems.

2000-06-14  Sven Wischnowsky  <wischnow@zsh.org>

	* 11885: Src/parse.c: nix kaboom with `time time'
	
	* 11890: Src/Zle/complist.c: better fix for menu selection on dumb 
	terminal
	
2000-06-13  Clint Adams  <schizo@debian.org>

	* 11882: Completion/Debian/_dpkg: more intelligence in
	dpkg completion.

2000-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 11876: Doc/Zsh/compsys.yo, Src/Zle/computil.c: make -A take a
	pattern as argument to match non-arguments; allow single-letter
	option strings to have multiple arguments; fix to allow option
	completion with multiple sets
	
	* 11872 Completion/Commands/_generic, Doc/Zsh/compsys.yo: new
	_generic widget to call completion with $WIDGET in function field
	of context
	
	* 11873: Completion/Core/_main_complete, Doc/Zsh/compsys.yo: allow 
	insert-tab style to contain `pending[=num]' to handle the case
	when there is pending input

	* 11874: Completion/Core/_expand, Doc/Zsh/compsys.yo: new style
	`suffix', use accept-exact style in _expand
	
	* 11875: Src/Zle/complist.c: fix for longer capability strings;
	very bad

2000-06-13  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11877: Src/zsh.h: make PRINT_ flags unique again.

2000-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 11870: Completion/Core/_path_files, Src/Zle/complete.c,
 	Src/Zle/compmatch.c, Src/Zle/computil.c: fixes for calling
	compfiles, for completing words with special characters; make
	compfiles optimisations work with globcomplete and simple match
	specs

2000-06-12  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11867: Src/builtin.c, Src/params.c, Src/zsh.h,
	Doc/Zsh/builtins.yo: don't use -H flag for parameters mentioned
	explicitly or by pattern.

2000-06-11  Bart Schaefer  <schaefer@zsh.org>
