@@ -1,5 +1,9 @@
 2000-06-14  Peter Stephenson  <pws@cambridgesiliconradio.com>
 
+	* 11901: Src/signals.c: not one but two more bugs in trap
+	saving: sigfuncs wasn't reset for function signals, and dosavetrap()
+	didn't check sigtrapped before assuming sigfuncs was valid.
+
 	* 11895: Src/signals.c: exit traps weren't cleared from the
 	list properly, resulting in memory management problems.
 
